--- a/index.html
+++ b/index.html
@@ -245,53 +245,49 @@
 						<div class="sb-item">
 							<img src="img/blog-thumbs/6.jpg" alt="">
 							<div class="sb-text">
-								<div class="sb-date">April 1,2019</div>
-								<h6>10 Amazing new games</h6>
+								<h6 style="font-size: 25px;">Programming</h6>
 								<div class="sb-metas">
-									<div class="sb-meta">By Admin</div>
-									<div class="sb-meta">in <a href="#">Games</a></div>
-									<div class="sb-meta">3 Comments</div>
+									<div class="sb-meta"></div>
+									<div class="sb-meta"><a href="#"></a></div>
+									<div class="sb-meta"></div>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
 							</div>
 						</div>
 						<div class="sb-item">
 							<img src="img/blog-thumbs/7.jpg" alt="">
 							<div class="sb-text">
-								<div class="sb-date">April 1,2019</div>
-								<h6>10 Amazing new games</h6>
+								<h6 style="font-size: 25px;">Cloud</h6>
 								<div class="sb-metas">
-									<div class="sb-meta">By Admin</div>
-									<div class="sb-meta">in <a href="#">Games</a></div>
-									<div class="sb-meta">3 Comments</div>
+									<div class="sb-meta"></div>
+									<div class="sb-meta"><a href="#"></a></div>
+									<div class="sb-meta"></div>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
 							</div>
 						</div>
 						<div class="sb-item">
 							<img src="img/blog-thumbs/8.jpg" alt="">
 							<div class="sb-text">
-								<div class="sb-date">April 1,2019</div>
-								<h6>10 Amazing new games</h6>
+								<h6 style="font-size: 25px;">Networking</h6>
 								<div class="sb-metas">
-									<div class="sb-meta">By Admin</div>
-									<div class="sb-meta">in <a href="#">Games</a></div>
-									<div class="sb-meta">3 Comments</div>
+									<div class="sb-meta"></div>
+									<div class="sb-meta"><a href="#"></a></div>
+									<div class="sb-meta"></div>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
 							</div>
 						</div>
 						<div class="sb-item">
 							<img src="img/blog-thumbs/9.jpg" alt="">
 							<div class="sb-text">
-								<div class="sb-date">April 1,2019</div>
-								<h6>10 Amazing new games</h6>
+								<h6 style="font-size: 25px;">Security</h6>
 								<div class="sb-metas">
-									<div class="sb-meta">By Admin</div>
-									<div class="sb-meta">in <a href="#">Games</a></div>
-									<div class="sb-meta">3 Comments</div>
+									<div class="sb-meta"></div>
+									<div class="sb-meta"><a href="#"></a></div>
+									<div class="sb-meta"></div>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
 							</div>
 						</div>
 					</div>
