--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="col-lg-10 offset-lg-1">
 							<h2>Enter the Battle</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-							<a href="#" class="site-btn">Read More</a>
+							<a href="#body" class="site-btn">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 						<div class="col-lg-10 offset-lg-1">
 							<h2>Enter the Battle</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-							<a href="#" class="site-btn">Read More</a>
+							<a href="#body" class="site-btn">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -238,6 +238,7 @@
 
 	<!-- Blog list section -->
 	<section class="blog-list-section spad">
+	<center><h3 id="body" style="color: white;">An Overview of Information Technology</h3></center><br><br><br><br>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
@@ -245,19 +246,19 @@
 						<div class="sb-item">
 							<img src="img/blog-thumbs/6.jpg" alt="">
 							<div class="sb-text">
-								<h6 style="font-size: 25px;">Programming</h6>
+								<h6 id="programming" style="font-size: 25px;">Programming</h6><!--Font color of circle 1-->
 								<div class="sb-metas">
 									<div class="sb-meta"></div>
 									<div class="sb-meta"><a href="#"></a></div>
 									<div class="sb-meta"></div>
 								</div>
-								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<!--needs to be 3 lines, no more, no less--><p style="font-size: 20px;">The new languages of the Internet. From simple buttons on webpages to full fledged video games, programming is what makes the wheels turn.</p>
 							</div>
 						</div>
 						<div class="sb-item">
 							<img src="img/blog-thumbs/7.jpg" alt="">
 							<div class="sb-text">
-								<h6 style="font-size: 25px;">Cloud</h6>
+								<h6 id="cloud" style="font-size: 25px;">Cloud</h6><!--Font color of circle 2-->
 								<div class="sb-metas">
 									<div class="sb-meta"></div>
 									<div class="sb-meta"><a href="#"></a></div>
@@ -269,95 +270,85 @@
 						<div class="sb-item">
 							<img src="img/blog-thumbs/8.jpg" alt="">
 							<div class="sb-text">
-								<h6 style="font-size: 25px;">Networking</h6>
+								<h6 id="networking" style="font-size: 25px;">Networking</h6><!--Font color of circle 3-->
 								<div class="sb-metas">
 									<div class="sb-meta"></div>
 									<div class="sb-meta"><a href="#"></a></div>
 									<div class="sb-meta"></div>
 								</div>
-								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">The circuits and steel of all technology. The body that the code brings to life. The bridges of all information. Cabling and physical objects/devices.</p>
 							</div>
 						</div>
 						<div class="sb-item">
 							<img src="img/blog-thumbs/9.jpg" alt="">
 							<div class="sb-text">
-								<h6 style="font-size: 25px;">Security</h6>
+								<h6 id="security" style="font-size: 25px;">Security</h6><!--Font color of circle 5-->
 								<div class="sb-metas">
 									<div class="sb-meta"></div>
 									<div class="sb-meta"><a href="#"></a></div>
 									<div class="sb-meta"></div>
 								</div>
-								<p style="font-size: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. </p>
+								<p style="font-size: 20px;">The  Gatekeepers and Hackers. Good versus Evil. The frontlines of protection. The constant war waged across the whole Internet.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="sb-widget">
-						<h2 class="sb-title">Top 5 this week</h2>
+						<h2 id="events" class="sb-title">Upcoming IT Events</h2>
 						<div class="latest-news-widget top-five">
 							<div class="ln-item">
-								<div class="ln-index">01</div>
+								<div class="ln-index">05/24</div>
 								<img src="img/blog-thumbs/1.jpg" alt="">
 								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
+									<h6>Event 1</h6>
 									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
+										<div class="ln-meta">Stuff about the event yoStuff about the. event yoStuff about the event yoStuff.</div>
+										<br><div class="ln-meta"><a style="cursor: default;">Programming</a></div><!--Font colors should match the circles-->
 									</div>
 								</div>
 							</div>
 							<div class="ln-item">
-								<div class="ln-index">02</div>
+								<div class="ln-index">05/24</div>
 								<img src="img/blog-thumbs/2.jpg" alt="">
 								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
+									<h6>Event 2</h6>
 									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
+										<div class="ln-meta">Stuff about the event yoStuff about the. event yoStuff about the event yoStuff.</div>
+										<br><div class="ln-meta"><a style="cursor: default;">Programming</a></div><!--Font colors should match the circles-->
 									</div>
 								</div>
 							</div>
 							<div class="ln-item">
-								<div class="ln-index">03</div>
+								<div class="ln-index">05/24</div>
 								<img src="img/blog-thumbs/3.jpg" alt="">
 								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
+									<h6>Event 3</h6>
 									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
+										<div class="ln-meta">Stuff about the event yoStuff about the. event yoStuff about the event yoStuff.</div>
+										<br><div class="ln-meta"><a style="cursor: default;">Programming</a></div><!--Font colors should match the circles-->
 									</div>
 								</div>
 							</div>
 							<div class="ln-item">
-								<div class="ln-index">04</div>
+								<div class="ln-index">05/24</div>
 								<img src="img/blog-thumbs/4.jpg" alt="">
 								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
+									<h6>Event 4</h6>
 									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
+										<div class="ln-meta">Stuff about the event yoStuff about the. event yoStuff about the event yoStuff.</div>
+										<br><div class="ln-meta"><a style="cursor: default;">Programming</a></div><!--Font colors should match the circles-->
 									</div>
 								</div>
 							</div>
 							<div class="ln-item">
-								<div class="ln-index">05</div>
+								<div class="ln-index">05/24</div>
 								<img src="img/blog-thumbs/5.jpg" alt="">
 								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
+									<h6>Event 5</h6>
 									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
+										<div class="ln-meta">Stuff about the event yoStuff about the. event yoStuff about the event yoStuff.</div>
+										<br><div class="ln-meta"><a style="cursor: default;">Programming</a></div><!--Font colors should match the circles-->
 									</div>
 								</div>
 							</div>
@@ -372,96 +363,9 @@
 	<!-- Footer section -->
 	<div class="footer-section">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="footer-widget">
-						<div class="about-widget">
-							<img src="img/logo.png" alt="">
-							<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. Morbi id dictum quam, ut commodo.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Usfull Links</h2>
-						<ul>
-							<li><a href="">Games</a></li>
-							<li><a href="">testimonials</a></li>
-							<li><a href="">Reviews</a></li>
-							<li><a href="">Characters</a></li>
-							<li><a href="">Latest news</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Services</h2>
-						<ul>
-							<li><a href="">About us</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Become a writer</a></li>
-							<li><a href="">Jobs</a></li>
-							<li><a href="">FAQ</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Careeres</h2>
-						<ul>
-							<li><a href="">Donate</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Subscriptions</a></li>
-							<li><a href="">Careers</a></li>
-							<li><a href="">Our team</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget fw-latest-post">
-						<h2 class="fw-title">Usfull Links</h2>
-						<div class="latest-news-widget">
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="copyright"><a href=""><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
-		</div>
-		<div class="social-links-warp">
-			<div class="container">
-				<div class="social-links">
-					<a href="#"><i class="fa fa-instagram"></i><span>instagram</span></a>
-					<a href="#"><i class="fa fa-pinterest"></i><span>pinterest</span></a>
-					<a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
-					<a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
-					<a href="#"><i class="fa fa-youtube"></i><span>youtube</span></a>
-					<a href="#"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a>
-				</div>
-			</div>
+			<center><div class="copyright"><a href=""><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> <a style="cursor: default;">by</a> <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div></center>
 		</div>
 	</div>
 	<!-- Footer section end -->
