--- a/characters.html
+++ b/characters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>TheQuest - Gaming Magazine Template</title>
+	<title>About Us</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="TheQuest Gaming Magazine Template">
 	<meta name="keywords" content="gaming, html">
@@ -43,15 +43,15 @@
 		</a>
 		<ul class="main-menu">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="characters.html">Characters</a></li>
-			<li><a href="game.html">Games</a></li>
-			<li><a href="reviews.html">Reviews</a></li>
-			<li><a href="news.html">News</a></li>
-			<li><a href="single-post.html">Page</a></li>
+			<li><a href="index.html#programming">Programming</a></li>
+			<li><a href="index.html#cloud">Cloud</a></li>
+			<li><a href="index.html#networking">Networking</a></li>
+			<li><a href="index.html#security">Security</a></li>
+			<li><a href="index.html#events">Events</a></li>
+			<li><a href="news.html">Blogs</a></li>
+			<li><a href="characters.html">About Us</a></li>
+			<!--single-post.html blogs-->
 		</ul>
-		<div class="header-add">
-			<img src="img/add.jpg" alt="">
-		</div>
 	</header>
 	<!-- Header section end -->
 
@@ -88,7 +88,7 @@
 								<h4>Weapons</h4>
 							</div>
 						</div>
-						<a href="#" class="site-btn">Read More</a>
+						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -124,7 +124,7 @@
 								<h4>Weapons</h4>
 							</div>
 						</div>
-						<a href="#" class="site-btn">Read More</a>
+						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -160,7 +160,7 @@
 								<h4>Weapons</h4>
 							</div>
 						</div>
-						<a href="#" class="site-btn">Read More</a>
+						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -196,7 +196,7 @@
 								<h4>Weapons</h4>
 							</div>
 						</div>
-						<a href="#" class="site-btn">Read More</a>
+						<!--<a href="#" class="site-btn">Read More</a>-->
 					</div>
 				</div>
 			</div>
@@ -207,114 +207,12 @@
 	</section>
 	<!-- Character section 4 end -->
 
-	<!-- Banner section -->
-	<section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
-		<div class="container">
-			<div class="banner-text text-white">
-				<div class="banner-logo">
-					<h6>Spring Special Offer</h6>
-					<img src="img/logo-3.png" alt="">
-				</div>
-				<p>Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem. In at nisi nec arcu porttitor aliquet vitae at dui. Sed sollicitudin nulla non leo viverra scelerisque.</p>
-				<a href="#" class="site-btn sb-color">Buy it now</a>
-			</div>
-		</div>
-	</section>
-	<!-- Banner section end -->
-
 	<!-- Footer section -->
 	<div class="footer-section">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="footer-widget">
-						<div class="about-widget">
-							<img src="img/logo.png" alt="">
-							<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo. Morbi id dictum quam, ut commodo.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Usfull Links</h2>
-						<ul>
-							<li><a href="">Games</a></li>
-							<li><a href="">testimonials</a></li>
-							<li><a href="">Reviews</a></li>
-							<li><a href="">Characters</a></li>
-							<li><a href="">Latest news</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Services</h2>
-						<ul>
-							<li><a href="">About us</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Become a writer</a></li>
-							<li><a href="">Jobs</a></li>
-							<li><a href="">FAQ</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Careeres</h2>
-						<ul>
-							<li><a href="">Donate</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Subscriptions</a></li>
-							<li><a href="">Careers</a></li>
-							<li><a href="">Our team</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="footer-widget fw-latest-post">
-						<h2 class="fw-title">Usfull Links</h2>
-						<div class="latest-news-widget">
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			<center><div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
-		</div>
-		<div class="social-links-warp">
-			<div class="container">
-				<div class="social-links">
-					<a href="#"><i class="fa fa-instagram"></i><span>instagram</span></a>
-					<a href="#"><i class="fa fa-pinterest"></i><span>pinterest</span></a>
-					<a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
-					<a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
-					<a href="#"><i class="fa fa-youtube"></i><span>youtube</span></a>
-					<a href="#"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a>
-				</div>
-			</div>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div></center>
 		</div>
 	</div>
 	<!-- Footer section end -->
