--- a/news.html
+++ b/news.html
@@ -159,7 +159,7 @@
 							<li><a href="">Other<span>1</span></a></li>
 						</ul>
 					</div>
-					<div class="sb-widget">
+					<div class="sb-widget" style="position: sticky; top: 15px;">
 						<h2 class="sb-title">Popular Blogs</h2>
 						<div class="latest-news-widget">
 							<div class="ln-item">
