--- a/characters.html
+++ b/characters.html
@@ -63,65 +63,33 @@
 	</section>
 	<!-- Page top section end -->
 
-	<!-- Character section 1 -->
-	<section class="characters-section character-one">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-7">
-					<div class="character-info">
-						<img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Judge</h2>
-						<h5>Users: 4.8</h5>
-						<h5>MetaCritic: 4.5</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p>
-						<div class="progress-warp">
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-1" data-cpvalue="75" data-cpcolor="#10ddb4"></div>
-								<h4>Strenghts</h4>
-							</div>
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-2" data-cpvalue="90" data-cpcolor="#10ddb4"></div>
-								<h4>Power</h4>
-							</div>
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-3" data-cpvalue="80" data-cpcolor="#10ddb4"></div>
-								<h4>Weapons</h4>
-							</div>
-						</div>
-						<!--<a href="#" class="site-btn">Read More</a>-->
-					</div>
-				</div>
-			</div>
-			<div class="character-img">
-				<img src="img/game-characters/1.png" alt="">
-			</div>
-		</div>
-	</section>
-	<!-- Character section 1 end -->
-
-	<!-- Character section 2 -->
+<!-- Character section 1 -->
 	<section class="characters-section character-two">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 offset-lg-5">
 					<div class="character-info">
 						<img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Soldier</h2>
-						<h5>Users: 4.8</h5>
-						<h5>MetaCritic: 4.5</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p>
+						<h2>The Commander</h2>
+						<h5>Mortal Name: Brandon</h5>
+						<h5>Aliases: N3rd B0i</h5>
+						<br><br><br><br><br><p>The Commander has spent much time in the IT realm. Rumor had it, he was an Assitant Network Administrator at his highschool during his senior year. He has since gone to 2 separate Post-secondary schools to raise his levels of IT skills. The soldier was in charge of the team that created the site you are viewing!</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-4" data-cpvalue="75" data-cpcolor="#10ddb4"></div>
-								<h4>Strenghts</h4>
+								<div class="circle-progress" data-cpid="id-1" data-cpvalue="70" data-cpcolor="#33cc33"></div>
+								<h4>Programming</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-5" data-cpvalue="90" data-cpcolor="#10ddb4"></div>
-								<h4>Power</h4>
+								<div class="circle-progress" data-cpid="id-2" data-cpvalue="35" data-cpcolor="#33cc33"></div>
+								<h4>Cloud</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-6" data-cpvalue="80" data-cpcolor="#10ddb4"></div>
-								<h4>Weapons</h4>
+								<div class="circle-progress" data-cpid="id-3" data-cpvalue="90" data-cpcolor="#33cc33"></div>
+								<h4>Networking</h4>
+							</div>
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-4" data-cpvalue="45" data-cpcolor="#33cc33"></div>
+								<h4>Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
@@ -133,6 +101,46 @@
 			</div>
 		</div>
 	</section>
+	<!-- Character section 1 end -->
+
+	<!-- Character section 2 -->
+	<section class="characters-section character-one">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-7">
+					<div class="character-info">
+						<img src="img/game-characters/title-icon.png" alt="">
+						<h2>The Judge</h2>
+						<h5>Users: 4.8</h5>
+						<h5>MetaCritic: 4.5</h5>
+						<br><br><br><br><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
+						<div class="progress-warp">
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-5" data-cpvalue="70" data-cpcolor="#33cc33"></div>
+								<h4>Programming</h4>
+							</div>
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-6" data-cpvalue="30" data-cpcolor="#33cc33"></div>
+								<h4>Cloud</h4>
+							</div>
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-7" data-cpvalue="90" data-cpcolor="#33cc33"></div>
+								<h4>Networking</h4>
+							</div>
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-8" data-cpvalue="40" data-cpcolor="#33cc33"></div>
+								<h4>Security</h4>
+							</div>
+						</div>
+						<!--<a href="#" class="site-btn">Read More</a>-->
+					</div>
+				</div>
+			</div>
+			<div class="character-img">
+				<img src="img/game-characters/1.png" alt="">
+			</div>
+		</div>
+	</section>
 	<!-- Character section 2 end -->
 
 	<!-- Character section 3 -->
@@ -141,23 +149,27 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="character-info">
-						<img src="img/game-characters/title-icon.png" alt="">
+						<br><br><img src="img/game-characters/title-icon.png" alt="">
 						<h2>The Princess</h2>
 						<h5>Users: 4.8</h5>
 						<h5>MetaCritic: 4.5</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p>
+						<br><br><br><br><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p><br><br><br><br><br>
 						<div class="progress-warp">
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-7" data-cpvalue="75" data-cpcolor="#10ddb4"></div>
-								<h4>Strenghts</h4>
+								<div class="circle-progress" data-cpid="id-9" data-cpvalue="70" data-cpcolor="#33cc33"></div>
+								<h4>Programming</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-8" data-cpvalue="90" data-cpcolor="#10ddb4"></div>
-								<h4>Power</h4>
+								<div class="circle-progress" data-cpid="id-10" data-cpvalue="35" data-cpcolor="#33cc33"></div>
+								<h4>Cloud</h4>
 							</div>
 							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-9" data-cpvalue="80" data-cpcolor="#10ddb4"></div>
-								<h4>Weapons</h4>
+								<div class="circle-progress" data-cpid="id-11" data-cpvalue="90" data-cpcolor="#33cc33"></div>
+								<h4>Networking</h4>
+							</div>
+							<div class="cp-item">
+								<div class="circle-progress" data-cpid="id-12" data-cpvalue="45" data-cpcolor="#33cc33"></div>
+								<h4>Security</h4>
 							</div>
 						</div>
 						<!--<a href="#" class="site-btn">Read More</a>-->
@@ -170,42 +182,6 @@
 		</div>
 	</section>
 	<!-- Character section 3 end -->
-
-	<!-- Character section 4 -->
-	<section class="characters-section character-four">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-7 offset-lg-5">
-					<div class="character-info">
-						<img src="img/game-characters/title-icon.png" alt="">
-						<h2>The Robot</h2>
-						<h5>Users: 4.8</h5>
-						<h5>MetaCritic: 4.5</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.</p>
-						<div class="progress-warp">
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-10" data-cpvalue="75" data-cpcolor="#10ddb4"></div>
-								<h4>Strenghts</h4>
-							</div>
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-11" data-cpvalue="90" data-cpcolor="#10ddb4"></div>
-								<h4>Power</h4>
-							</div>
-							<div class="cp-item">
-								<div class="circle-progress" data-cpid="id-12" data-cpvalue="80" data-cpcolor="#10ddb4"></div>
-								<h4>Weapons</h4>
-							</div>
-						</div>
-						<!--<a href="#" class="site-btn">Read More</a>-->
-					</div>
-				</div>
-			</div>
-			<div class="character-img">
-				<img src="img/game-characters/4.png" alt="">
-			</div>
-		</div>
-	</section>
-	<!-- Character section 4 end -->
 
 	<!-- Footer section -->
 	<div class="footer-section">
